Add: Basic functionality

--- a/deno.json
+++ b/deno.json
@@ -35,5 +35,8 @@
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   },
-  "nodeModulesDir": true
+  "nodeModulesDir": true,
+  "permissions": {
+    "net": ["api.github.com"]
+  }
 }
